# debusine

./: .codespell-ignore  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS  Makefile  README.md  manage.py  pyproject.toml  tox.ini
.gitlab/issue_templates/: Bug Report.md  Feature Request.md
ci/: pin-bookworm-backports.sh  pin-django-from-bookworm-backports.sh
debian/: changelog  control  copyright  debusine-client.README.Debian  debusine-client.examples  debusine-client.install  debusine-client.manpages  debusine-doc.README.Debian  debusine-doc.doc-base  debusine-doc.docs  debusine-server.README.Debian  debusine-server.config  debusine-server.debusine-server-celery.service  debusine-server.debusine-server-delete-expired.service  debusine-server.debusine-server-delete-expired.timer  debusine-server.debusine-server-migrate.service  debusine-server.debusine-server-periodic-tasks.service  debusine-server.debusine-server-provisioner.service  debusine-server.debusine-server-scheduler.service  debusine-server.debusine-server-vacuum-storage.service  debusine-server.debusine-server-vacuum-storage.timer  debusine-server.dirs  debusine-server.examples  debusine-server.install  debusine-server.lintian-overrides  debusine-server.manpages  debusine-server.postinst  debusine-server.postrm  debusine-server.prerm  debusine-server.service  debusine-server.templates  debusine-signing.config  debusine-signing.debusine-signing-migrate.service  debusine-signing.examples  debusine-signing.install  debusine-signing.lintian-overrides  debusine-signing.manpages  debusine-signing.postinst  debusine-signing.postrm  debusine-signing.prerm  (+13 more)
debian/po/: POTFILES.in  ca.po  de.po  es.po  nl.po  pt.po  pt_BR.po  templates.pot
debian/source/: lintian-overrides  options
debian/tests/: control  integration-tests-generic  integration-tests-generic.py  integration-tests-task-aptmirror  integration-tests-task-aptmirror.py  integration-tests-task-autopkgtest.py  integration-tests-task-blhc.py  integration-tests-task-debdiff.py  integration-tests-task-lintian.py  integration-tests-task-mmdebstrap.py  integration-tests-task-piuparts.py  integration-tests-task-sbuild.py  integration-tests-task-signing  integration-tests-task-signing.py  integration-tests-task-simplesystemimagebuild  integration-tests-task-simplesystemimagebuild.py  integration-tests-tasks-mmdebstrap-autopkgtest-sbuild-lintian-piuparts-blhc-debdiff  smoke-test-server  unit-tests-client  unit-tests-server  unit-tests-signing  unit-tests-tasks  unit-tests-worker
debian/tests/utils/: check-namespace-support  (+13 more)
debusine/: __init__.py  __main__.py
debusine/artifacts/: __init__.py  artifact_utils.py  local_artifact.py  models.py  playground.py
debusine/assets/: __init__.py  models.py
debusine/client/: __init__.py  __main__.py  cli.py  client_utils.py  config.py  dataentry.py  debusine.py  debusine_http_client.py  exceptions.py  file_uploader.py  models.py  setup.py  task_configuration.py
debusine/db/: __init__.py  apps.py  constraints.py  context.py  locks.py
debusine/django/: __init__.py  checks.py  django_utils.py
debusine/project/: __init__.py  asgi.py  celery.py  checks.py  project_utils.py  urls.py  wsgi.py
debusine/server/: __init__.py  apps.py  celery.py  consumers.py  exceptions.py  notifications.py  open_metrics.py  provisioning.py  routing.py  scheduler.py  scopes.py  serializers.py  status.py  tar.py
debusine/signing/: __init__.py  apps.py  checks.py  gnupg.py  models.py  openssl.py  sbsign.py  signing_utils.py
debusine/tasks/: __init__.py  _task.py  assemble_signed_source.py  autopkgtest.py  blhc.py  debdiff.py  extract_for_signing.py  lintian.py  makesourcepackageupload.py  mergeuploads.py  mmdebstrap.py  models.py  noop.py  piuparts.py  sbuild.py  sbuild_validator_mixin.py  server.py  simplesystemimagebuild.py  systembootstrap.py  systemimagebuild.py
debusine/test/: __init__.py  base.py  django.py  playground.py  test_utils.py
debusine/utils/: __init__.py  input.py  typing_utils.py
debusine/web/: __init__.py  admin.py  apps.py  context_processors.py  forms.py  helps.py  icons.py
debusine/worker/: __init__.py  __main__.py  _worker.py  config.py  debusine_async_http_client.py  system_information.py
docs/: Makefile  conf.py  dynamic_data.py  index.rst  todo.rst
docs/_ext/: debusine_sphinx.py
docs/common/: add-snapshot-repository.rst
docs/explanation/: concepts.rst  expiration-of-data.rst  introduction.rst  lookups.rst  package-repositories.rst  roadmap.rst  signing-service.rst  talks.rst  why.rst  work-request-scheduling.rst  workflow-orchestration.rst
docs/howtos/: add-new-user.rst  add-new-worker-pool.rst  add-new-worker.rst  configure-hsm.rst  configure-manage-worker.rst  contribute-workflow.rst  contribute.rst  create-an-api-token.rst  customize-site-branding.rst  dput-ng.rst  enable-logins-with-gitlab.rst  enable-notifications.rst  generate-signing-keys.rst  index-admin.rst  manage-task-configuration-collection.rst  set-up-apt-mirroring.rst  set-up-debusine-client.rst  set-up-debusine-server.rst  set-up-debusine-signing.rst  set-up-debusine-worker.rst  set-up-incus.rst
docs/manpages/: debusine-admin.1  debusine-signing.1  debusine-worker.1  debusine.1
docs/reference/: coding-practices.rst  debusine-admin-cli.rst  debusine-cli-config.rst  debusine-cli.rst  debusine-signing-cli.rst  debusine-worker-cli.rst  design-goals.rst  design-practices.rst  development-team-organization.rst  documentation-practices.rst  dput-ng-profiles.rst  faq.rst  index-building-blocks.rst  index-cli.rst  index-contributors.rst  index-misc.rst  lookup-syntax.rst  project-management-practices.rst  release-history.rst  release-note-practices.rst  sponsors.rst
docs/tutorials/: getting-started-with-debusine.rst  install-your-first-debusine-instance.rst  set-up-workflow-templates.rst
examples/client/: config.ini
examples/munin/: debusine
examples/nginx/: nginx-vhost-deb.conf  nginx-vhost.conf
examples/signing/: config.ini
examples/worker/: config.ini
newsfragments/: release-history-template.rst
(+988 files in other folders)
